<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/chain_menu"
        android:title="@string/menu_chainexplorer"
        app:showAsAction="never"/>

    <item
        android:id="@+id/connection_explanation_menu"
        android:title="@string/menu_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/find_peer"
        android:title="@string/menu_change_bootstrap"
        app:showAsAction="never" />

    <item
        android:id="@+id/funds"
        android:title="@string/menu_funds"
        app:showAsAction="never" />

    <item
        android:id="@+id/import_tokens"
        android:title="@string/menu_import_tokens"
        app:showAsAction="never" />

    <item
        android:id="@+id/export_tokens"
        android:title="@string/menu_export_tokens"
        app:showAsAction="never" />

    <item
        android:id="@+id/passport_scan"
        android:title="@string/menu_scan_passport"
        app:showAsAction="never"/>

</menu>